[gd_scene load_steps=12 format=3 uid="uid://blw5uskyvcsc4"]

[ext_resource type="Texture2D" uid="uid://bjqd4l7lvkdk3" path="res://Assets/Images/Skills/Firerain/fire1.png" id="1_3qjet"]
[ext_resource type="Script" path="res://Scripts/Skills/mike_fire_skill_area.gd" id="1_i1w82"]
[ext_resource type="Texture2D" uid="uid://dryb5uixkktvo" path="res://Assets/Images/Skills/Firerain/fire2.png" id="2_m6ecv"]
[ext_resource type="Texture2D" uid="uid://bgnmllpvmj6s8" path="res://Assets/Images/Skills/Firerain/fire3.png" id="3_80oxd"]
[ext_resource type="Texture2D" uid="uid://bp4mm2qr04sfd" path="res://Assets/Images/Skills/Firerain/shadow.png" id="4_xdnsh"]
[ext_resource type="Texture2D" uid="uid://bd674kbilvbyt" path="res://Assets/Images/Effects/bomb.png" id="5_rtbl5"]
[ext_resource type="AudioStream" uid="uid://cft00832wmncs" path="res://Assets/Sounds/FXs/Bullets/Sound_FireballUnleash.wav" id="7_1cns8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_26o7e"]
radius = 73.9444

[sub_resource type="SpriteFrames" id="SpriteFrames_geegh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3qjet")
}, {
"duration": 1.0,
"texture": ExtResource("2_m6ecv")
}, {
"duration": 1.0,
"texture": ExtResource("3_80oxd")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="Curve" id="Curve_ccpr2"]
_data = [Vector2(0.00193799, 0.0918069), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_o3sio"]
colors = PackedColorArray(1, 0, 0, 0.678431, 1, 0, 0, 0.0235294)

[node name="MikeFireSkillArea" type="Area2D"]
collision_layer = 0
collision_mask = 96
script = ExtResource("1_i1w82")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 1.4)
shape = SubResource("CircleShape2D_26o7e")
debug_color = Color(1, 1, 1, 0)

[node name="FireSprite" type="AnimatedSprite2D" parent="."]
rotation = -2.42444
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_geegh")
autoplay = "default"

[node name="TailLine" type="Line2D" parent="."]
top_level = true
points = PackedVector2Array(-117, -118, 2, 2)
width = 40.0
width_curve = SubResource("Curve_ccpr2")
gradient = SubResource("Gradient_o3sio")
begin_cap_mode = 2
end_cap_mode = 2

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(2.72933, 2.72933)
texture = ExtResource("4_xdnsh")

[node name="TailTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="Bomb" type="Sprite2D" parent="."]
position = Vector2(0, -1.90735e-06)
texture = ExtResource("5_rtbl5")
offset = Vector2(0, -120)

[node name="SoundFireballUnleash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1cns8")
volume_db = -10.0
autoplay = true
bus = &"Sound"

[connection signal="timeout" from="TailTimer" to="." method="_on_tail_timer_timeout"]
